hojadetrabajo/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: juliozaldana/go-container:latest # Imagen en Docker Hub
        ports:
        - containerPort: 8080
