hojadetrabajo/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: ClusterIP # Cambia a ClusterIP si usas Ingress
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: go-app
